--- a/PRIMER PAGINA.html
+++ b/PRIMER PAGINA.html
@@ -12,8 +12,36 @@
         <h6>Titulo 6</h6>
 
         <p>Esto es un párrafo</p> <!--Esta etiqueta es para poner un parrafo-->
-        <p>Esto es otro parrafo párrafo</p>
+        <p>Esto es otro parrafo párrafo</p><!--Con la etiqueta p al terminar el parrafo se queda una separación para el siguiente parrafo-->
         <p>Este es un parrafo con un salto de linea entre dos enunciados con la etiqueta "br /"
-            <br /> Aqui pusimos el salto de linea</p>
+        <br /> 
+        Aqui pusimos el salto de linea</p> <!--Con la etiqueta br / no se genera un espacio entre las lineas-->
+        <P>Para poner negritas se utiliza la etiqueta "<b>b</b>" y dentro de la etiqueta el texto que va en negritas
+            <hr /><!--Esta etiqueta agrega una linea horizontal en la pagina-->
+           <blockquote>La etiqueta "blockquote" se utiliza para hacer una cita de alguna bibliografia</blockquote> <br />
+           <code>La etiqueta "code" es para insertar codigo en la pagina, cambia el tipo de letra de lo que esté en esta etiqueta </code><br />
+           <em>La etiqueta "em" es para poner texto en cursiva o italik tambien sirve con la etiqueta "i"</em><br />
+           <i>Texto con cursiva</i> <br />
+           <pre>Etiqueta "pre" es para utilizar un texto con otro formato</pre> <br />
+           <s>la etiqueta "s" hace que el texto que pongas dentro de ella se raye</s><br />
+           <strong>Con la etiqueta "strong" pone en negrita el texto</strong><br />
+           <u>Con la etiqueta "u" se subraya el texto</u><br />
+           <div>Con la etiqueta "div" es para indicar una sección diferente dentro de la pagina web</div>
+           <div>Si ponemos el texto entre las etiquetas "div" se hace como un parrafo en cada texto o en cada contenido de la etiqueta "div" sin necesidad de usar la etiqueta "br" </div>
+           <hr />
+           <hr />
+           <p><h1>FORMULARIOS</h1></p>
+           <p>Para los formularios usamos la etiqueta <b>"form"</b></p>
+           <form>
+               <input type="number"><br /> <!--pone un cuadro de texto donde solo acepta números-->
+               <input type="password"><br /><!--Pone un cuadro de texto donde enmascara el texto y pone solo asteriscos-->
+               <input type="text"><br /><!--Pone un cuadro de texto y acepta texto, es la caractistica por default-->
+               <input type="submit"><br /><!--Pone el boton de enviar-->
+               <input type="search"><br /><!--pone un cuadro de texto para realizar busquedas-->
+               <input type="tel"><br /><!--pone un cuadro de texto para poner el número telefónico-->
+               <textarea></textarea><br />
+           </form>
+
+        </P>
     </body> 
 </html>
